# ik

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  WHAT_ARE_VTABLES.md  loc  log  stats
benchmarks/: CMakeLists.txt
benchmarks/benchmark/: CMakeLists.txt
benchmarks/benchmark/src/: CMakeLists.txt
benchmarks/src/: bench_FABRIK_solver.cpp  bench_main.cpp  bench_test.cpp
ik/: CMakeLists.txt  dirty_vtables.sh  ik_gen_vtable.py
ik/cmake/: build_number.txt  generate_python_docstrings.cmake  generate_python_unit_tests.cmake  generate_timestamp.cmake
ik/googletest/include/gtest/internal/: gtest-internal.h
ik/include/ik/: algorithm.h  attachment.h  backtrace.h  bone.h  bst_vector.h  bstv.h  build_info.h  callbacks.h  chain.h  chain_tree.h  config.h.in  constraint.h  cpputils.hpp  effector.h  export.h.in  hash.h  ik.h  info.h  init.h  joblist.h  log.h  mat3x3.h  mat3x4.h  mat3x4.inl  memory.h  meta_solvers.h  node.h  ordered_vector.h  pole.h  pose.h  python.h  quat.h  quat.inl  quaternion.h  refcount.h  retcodes.h  segment.h  solver.h  solver_1bone.h  solver_2bone.h  (+21 more)
ik/include/ik/python/: ik_module_log.h  ik_module_quat.h  ik_module_vec3.h
ik/include/ik/vtables/: log_static.v  node_base.v  solver_FABRIK.v  solver_MSS.v  solver_ONE_BONE.v  solver_TWO_BONE.v  solver_base.v
ik/include/private/ik/: algorithm_FABRIK.h  algorithm_MSS.h  algorithm_ONE_BONE.h  algorithm_TWO_BONE.h  algorithm_b1.h  algorithm_fabrik.h  algorithm_prepare.h  algorithm_update.h  backtrace.h  chain.h  init.h  memory.h  node_data.h  node_tree_flattened.h  ntf.h  packed_tree.h  refcounted.h  solver_FABRIK.h  solver_MSS.h  solver_ONE_BONE.h  solver_TWO_BONE.h  solver_head.h  solver_prepare.h  solver_update.h  solverdef.h
ik/include/public/ik/: .algorithm.h.kate-swp  algorithm.h  algorithm_head.h  attachment.h  bstv.h  btree.h  build_info.h  callbacks.h  constraint.h  effector.h  hash.h  hashmap.h  ik.h  info.h  init.h  joblist.h  log.h  mat3x3.h  node.h  node_data.h  pole.h  quat.h  refcount.h  retcodes.h  solver.h  solver_b1.h  solver_b2.h  solver_dummy.h  solver_fabrik.h  solver_head.h  solver_mss.h  solver_prepare.h  solver_update.h  tests.h  transform.h  vec3.h  vector.h
ik/include/python/doc/: IK_ALGORITHM_CONSTRAINTS_DOC.txt  IK_ALGORITHM_DOC.txt  IK_ALGORITHM_MAX_ITERATIONS_DOC.txt  IK_ALGORITHM_TOLERANCE_DOC.txt  IK_ALGORITHM_TYPE_DOC.txt  IK_ATTACHMENT_DOC.txt  IK_EFFECTOR_CHAIN_LENGTH_DOC.txt  IK_EFFECTOR_WEIGHT_DOC.txt
ik/include/vtables/: build_info.v  build_info_static.v  callback.v  constraint_base.v  effector_base.v  log.v  mat3x3.v  mat3x3_static.v  node_FABRIK.v  node_base.v  pole_base.v  quat.v  quat_static.v  solver.v  solver_FABRIK.v  solver_MSS.v  solver_ONE_BONE.v  solver_TWO_BONE.v  solver_base.v  solver_static.v  tests.v  tests_static.v  transform.v  transform_static.v  vec3.v  vec3_static.v
ik/src/: algorithm.c  algorithm_FABRIK.c  algorithm_MSS.c  algorithm_ONE_BONE.c  algorithm_b1.c  algorithm_b2.c  algorithm_fabrik.c  algorithm_prepare.c  algorithm_update.c  attachment.c  bone.c  bst_vector.c  bstv.c  btree.c  build_info.c.in  callback.c  callbacks.c  chain.c  chain_tree.c  constraint.c  effector.c  hash.c  hashmap.c  ik.c  init.c  joblist.c  log.c  log_static.c  mat3x3.c  mat3x3_static.c  memory.c  node.c  node_data.c  node_tree_flattened.c  ntf.c  ordered_vector.c  pole.c  pose.c  quat.c  quat_static.c  (+42 more)
ik/src/benchmarks/: bench_FABRIK_solver.cpp  bench_solver.cpp  run_benchmarks.cpp
ik/src/iface/: log.c  mat3x3.c  quat.c  solver.c  transform_chains.c  transform_tree.c  vec3.c
ik/src/python/: ik_module.c  ik_module_info.c  ik_module_log.c  ik_module_node.c  ik_module_quat.c  ik_module_solver.c  ik_module_vec3.c  ik_type_Algorithm.c  ik_type_Attachment.c  ik_type_Bone.c  ik_type_Constraint.c  ik_type_Effector.c  ik_type_Info.c  ik_type_Log.c  ik_type_Mat3x4.c  ik_type_ModuleRef.c  ik_type_Node.c  ik_type_Pole.c  ik_type_Pose.c  ik_type_Quat.c  ik_type_Solver.c  ik_type_TreeObject.c  ik_type_Vec3.c  init.c
ik/src/solver/: solver_static.c
ik/src/solver/BASE/: constraint_base.c  node_base.c  solver_base.c
ik/src/solver/FABRIK/: node_FABRIK.c  solver_FABRIK.c
ik/src/solver/MSS/: solver_MSS.c
ik/src/solver/ONE_BONE/: solver_ONE_BONE.c
ik/src/solver/TWO_BONE/: solver_TWO_BONE.c
ik/src/solver/base/: constraint_base.c  effector_base.c  node_base.c  pole_base.c  solver_base.c
ik/src/tests/: environment_library_init.cpp  run_tests.c  test_FABRIK.cpp  test_TWO_BONE.cpp  test_algorithm_prepare.cpp  test_algorithm_update.cpp  test_bstv.cpp  test_btree.cpp  test_build_solver.cpp  test_chain.cpp  test_chain_tree.cpp  test_constraint.cpp  test_effector.cpp  test_hashmap.cpp  test_joblist.cpp  test_mat3x3.cpp  test_node.cpp  test_node_data_flatten.cpp  test_ntf.cpp  test_pole.cpp  test_quat.cpp  test_refcount.cpp  test_solver.cpp  test_solver_b1.cpp  test_solver_b2.cpp  test_solver_build.cpp  test_solver_combine.cpp  test_solver_group.cpp  test_solver_prepare.cpp  test_solver_update.cpp  test_solvers.cpp  test_transform_bone.cpp  test_transform_chain.cpp  test_transform_chain_rotations.cpp  test_transform_chain_translations.cpp  test_transform_node.cpp  test_transform_node_rotations.cpp  test_transform_node_to_bone.cpp  test_transform_node_translations.cpp  test_transform_segmental.cpp  (+11 more)
ik/src/tests/python/: test_Algorithm.py  test_Bone.py  test_Constraint.py  test_Effector.py  test_Node.py  test_Pose.py  test_Quat.py  test_Solver.py  test_TreeObject.py  test_Vec3.py  test_info.py  test_log.py  test_python_bindings.cpp.in
ik/templates/: build_info.c.in  config.h.in  info.c.in  test_python_bindings.cpp.in
ik/tests/: environment_library_init.cpp  run_tests.c  test_transform_chain.cpp  tests_static.cpp  tests_static_stub.c
ik/tests/python/: test_python_bindings.cpp.in
tests/: CMakeLists.txt
tests/googlemock/: CMakeLists.txt
tests/googletest/cmake/: internal_utils.cmake
tests/src/: environment_util_global.cpp  test_FABRIK.cpp  test_bst_vector.cpp  test_ordered_vector.cpp  test_transform_chain.cpp  test_transform_tree.cpp  test_vector.cpp
(+77 files in other folders)
